--- a/plutocart_frontend/pubspec.yaml
+++ b/plutocart_frontend/pubspec.yaml
@@ -33,6 +33,13 @@ dependencies:
   flutter_bloc: ^7.3.3
   equatable: ^2.0.5
   convex_bottom_bar: ^3.2.0
+  dio: ^4.0.0
+  flutter_launcher_icons: "^0.13.1"
+  flutter_native_splash: ^2.2.16
+  card_swiper : ^3.0.0
+  flutter_swiper_view: "^1.1.8"
+  carousel_slider: ^4.2.1
+  lite_rolling_switch: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,18 +49,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.13.1"
-  flutter_native_splash: ^2.2.16
 
 flutter_native_splash:
   color: "#FFFFFF"
-  image: assets/icon/icon_launch.png
-  branding: assets/icon/icon_launch.png
-  branding_mode: bottom
+  color_darl: "#000000"
+  image: assets/icon/icon_app.png
   android_12:
-    image: assets/icon/icon_launch.png
+    image: assets/icon/icon_app.png
     color: "#FFFFFF"
-    branding: assets/icon/icon_launch.png
+    color_darl: "#000000"
   android: true
   ios: true
   android_gravity: center
@@ -88,10 +92,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - "assets/icon/icon_launch.png"
+    - "assets/icon/cancle_icon.png"
     - "assets/icon/transaction_icon.png"
+    - "assets/icon/home_icon.png"
     - "assets/icon/debt_icon.png"
     - "assets/icon/graph_icon.png"
     - "assets/icon/goal_icon.png"
+    - "assets/icon/edit_icon.png"
+    - "assets/icon/wallet_icon.png"
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -105,17 +114,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: "assets/fonts/Roboto-Black.ttf"
+        - asset: "assets/fonts/Roboto-BlackItalic.ttf"
+        - asset: "assets/fonts/Roboto-Bold.ttf"
+        - asset: "assets/fonts/Roboto-BoldItalic.ttf"
+        - asset: "assets/fonts/Roboto-Italic.ttf"
+        - asset: "assets/fonts/Roboto-Light.ttf"
+        - asset: "assets/fonts/Roboto-LightItalic.ttf"
+        - asset: "assets/fonts/Roboto-Medium.ttf"
+        - asset: "assets/fonts/Roboto-MediumItalic.ttf"
+        - asset: "assets/fonts/Roboto-Regular.ttf"
+        - asset: "assets/fonts/Roboto-Thin.ttf"
+        - asset: "assets/fonts/Roboto-ThinItalic.ttf"
+  
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
